fix contrast

--- a/public/components/Card/style.module.css
+++ b/public/components/Card/style.module.css
@@ -69,7 +69,7 @@
 }
 .compat li {
   padding: 0.2rem 0;
-  color: #555;
+  color: #333;
   font-size: 0.7rem;
   font-weight: 500;
   text-align: center;
@@ -80,9 +80,9 @@
 .compat li.unsupported {
   opacity: 0.4;
 }
-.compat li.canary span,
-.compat li.polyfilled span {
-  opacity: 0.6;
+.compat li.canary,
+.compat li.polyfilled {
+  color: #626262;
 }
 .compat img {
   width: 32px;
